# Prueba-_Entrevista_Cpp

./: .gitignore  CMakeLists.txt  IModule.cpp  README.md  module1.cpp  module2.cpp  module3.cpp  moduleBase.cpp  test_cxx  test_cxx.cpp
include/: Message.h  Module1.h  Module2.h  ModuleBase.h  SafeQueue.h
proyecto/include/: saludo.h
proyecto/src/: main.cpp  saludo.cpp
src/: Module1.cpp  Module2.cpp  ModuleBase.cpp  main.cpp
